--- a/css/main.css
+++ b/css/main.css
@@ -86,16 +86,17 @@ select{}
 
 /*menu*/
 #main-menu{top:66px; left:170px; position:absolute;}
-.ul-1, .ul-2{margin-left:-38px}/*use -40px for 0 offset*/
+.ul-1, .ul-2{margin-left:-40px}/*use -40px for 0 offset*/
 .ul-0{float:left; padding:10px}
 .ul-1, .ul-2{display:block}
 #mega-dropdown{text-transform:uppercase; font-size:0.7em; background:rgba(23, 23, 23, 0.95); height: 295px; position: absolute;left: 15px;top: 99px;width: 994px;}
-#mega-dropdown ul {list-style-type:none;}
+#mega-dropdown ul {list-style-type:none; line-height:20px;}
 #mega-dropdown a{text-decoration:none}
 .top-level{font-size:0.65em; text-decoration:none; padding:5px; text-transform:uppercase}
 .li-0 a, .top-level{color:#fff; }
 .li-1 a{color:#a4a4a4; }
 .li-2 a, .li-2 span{color:#656565; font-size:0.7em;}
+.menu-more a{font-size:0.7em;}
 .li-0 a:hover, .li-1 a:hover,  .top-level:hover{color:#ffe100}
 
 
