--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@
 ****************/
 
 /*body*/
-body{margin:0; background:#ffffff; font-family: HelveticaNeueCE-Roman;}
+body{margin:0; background:#E0E0C0; font-family: HelveticaNeueCE-Roman;}
 
 /*headings*/
 h1{}
@@ -86,10 +86,10 @@ select{}
 
 /*menu*/
 #main-menu{top:66px; left:170px; position:absolute;}
-.ul-1, .ul-2{margin-left:-40px}/*use -40px for 0 offset*/
+.ul-1, .ul-2{margin-left:-25px}/*use -40px for 0 offset*/
 .ul-0{padding:10px;}
 #mega-dropdown{text-transform:uppercase; font-size:0.7em; background:rgba(23, 23, 23, 0.95);  position: absolute;left: 15px;top: 99px;width: 994px;}
-#mega-dropdown ul {list-style-type:none; line-height:20px;}
+#mega-dropdown ul {list-style-type:none; line-height:15px;}
 #mega-dropdown a{text-decoration:none}
 .top-level{font-size:0.7em; text-decoration:none; padding:5px; text-transform:uppercase}
 .li-0 a, .top-level{color:#fff; }
@@ -98,7 +98,8 @@ select{}
 .menu-more a{font-size:0.7em;}
 .li-0 a:hover, .li-1 a:hover,  .top-level:hover{color:#ffe100}
 
-.li-1{width:220px; float:left; padding: 0 10px 20px}
+.li-1{width:205px; float:left; padding: 0 10px 30px}
+.li-2{list-style-type:disc;color:#656565;}
 
 
 /*content container*/
