--- a/css/main.css
+++ b/css/main.css
@@ -113,14 +113,34 @@ select{}
 /*footer*/
 #footer{/*text colors etc*/}
 #footer-columns{top:15px; left:45px; position:relative}
-.footer-column{width:215px; float:left}
-.footer-column p{color:#a4a4a4; font-size:0.8em;}
-.footer-column ul{margin-left:-20px; color:#656565;}
-.footer-column a{color:#656565; font-size:0.8em; text-decoration:none; line-height:20px}
-.footer-column a:hover{color:#ffe100}
+.footer-column{width:180px; float:left}
+#footer-email input{border:0; padding:5px;  color:#656565;}
+#footer-email input[type=text]{width:125px; background:#e9e9e9; }
+#footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); padding-right:25px;color:#1c1800; font-weight:bold}
 
+.footer-column p{color:#a4a4a4; font-size:0.8em;}
+.news-offers{color:#656565; font-size:0.8em; margin-top: -5px; display: block;}
+.sign-up{color:#a4a4a4; font-size:0.7em;}
+.footer-column ul{margin-left:-20px; color:#656565;}
+.footer-column a{color:#656565; font-size:0.7em; text-decoration:none; line-height:20px;}
+.footer-column a:hover{color:#ffe100}
+#last-footer-column{padding-top:10px}
 #footer-nav{height:186px; background:#1e1e1e;}
-#footer-legal{height:66px; background:#171717}
+#sign-up-copy{width:152px; float:left; text-align:right; margin-right:3px}
+#footer-legal, #footer-follow{height:66px; background:#171717; color:#656565; float:left}
+#footer-legal{width:760px; text-align:right; font-size:0.55em}
+#footer-legal span{padding:30px 10px; display:block;}
+#footer-follow {width:264px}
+#footer-follow a {display: inline-block; margin:20px 0 0 7px}
+#footer-follow h2 {display:block;font-size:0.8em;padding-right:0px; margin:27px 5px 0 35px; float:left; font-weight:bold}
+.social-icon {display: block;width: 29px; height: 29px; background-repeat: no-repeat; background-image: url('../img/ui/social-icons-sprite.png');background-position: 0px 0px;}
+
+a.social-icon.twitter {background-position: -90px 0px;}
+a.social-icon.facebook {background-position: -120px 0px;}
+a.social-icon.youtube {background-position: -150px 0px;}
+a.social-icon.twitter:hover {background-position: 0px 0px;}
+a.social-icon.facebook:hover {background-position: -30px 0px;}
+a.social-icon.youtube:hover {background-position: -60px 0px;}
 
 /*custom components*/
 
