--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,8 @@
   
 @font-face {font-family: 'HelveticaNeueCE-Bold';src: url('../webfonts/28A949_1_0.eot');src: url('../webfonts/28A949_1_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/28A949_1_0.woff') format('woff'),url('../webfonts/28A949_1_0.ttf') format('truetype');}
 
+.white{color:#ffffff}
+
 
 /****************
 *
@@ -112,15 +114,18 @@ select{}
 
 /*footer*/
 #footer{/*text colors etc*/}
-#footer-columns{top:15px; left:45px; position:relative}
-.footer-column{width:180px; float:left}
+#footer-columns{top:15px; left:45px; position:relative; width: 934px;}
+.footer-column{width:170px; float:left}
+#footer-email {float:right}
 #footer-email input{border:0; padding:5px;  color:#656565;}
-#footer-email input[type=text]{width:125px; background:#e9e9e9; }
-#footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); padding-right:25px;color:#1c1800; font-weight:bold}
+#footer-email input[type=text]{width:145px; background:#e9e9e9; height: 18px }
+#footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); padding-right:25px;color:#1c1800; font-weight:bold; height: 28px;}
 
 .footer-column p{color:#a4a4a4; font-size:0.8em;}
-.news-offers{color:#656565; font-size:0.8em; margin-top: -5px; display: block;}
+.news-offers{margin-top: -5px; display: block;}
+.telephone, .news-offers{color:#656565; font-size:0.8em;}
 .sign-up{color:#a4a4a4; font-size:0.7em;}
+.call-us{font-size:0.8em}
 .footer-column ul{margin-left:-20px; color:#656565;}
 .footer-column a{color:#656565; font-size:0.7em; text-decoration:none; line-height:20px;}
 .footer-column a:hover{color:#ffe100}
@@ -134,6 +139,9 @@ select{}
 #footer-follow a {display: inline-block; margin:20px 0 0 7px}
 #footer-follow h2 {display:block;font-size:0.8em;padding-right:0px; margin:27px 5px 0 35px; float:left; font-weight:bold}
 .social-icon {display: block;width: 29px; height: 29px; background-repeat: no-repeat; background-image: url('../img/ui/social-icons-sprite.png');background-position: 0px 0px;}
+#contact-info {text-align:right}
+.opening-hours{color:#656565; font-size:0.75em; margin-top:-3px; display:block}
+#i-s-logo{float:right; margin: 20px 0;}
 
 a.social-icon.twitter {background-position: -90px 0px;}
 a.social-icon.facebook {background-position: -120px 0px;}
