--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@ a img{border:0; display:block}
 /*forms*/
 input{font-family: HelveticaNeueCE-Roman;}
 input:focus {outline: none;}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
 button{}
 select{}
 
@@ -91,7 +96,7 @@ select{}
 #main-menu{top:66px; left:170px; position:absolute;}
 .ul-1, .ul-2{margin-left:-25px}/*use -40px for 0 offset*/
 .ul-0{padding:10px;}
-#mega-dropdown{text-transform:uppercase; font-size:0.7em;  background-color: #000; background-color:rgba(23, 23, 23, 0.95);  *background-color: #000; position: absolute;left: 15px;top: 99px;width: 994px;}
+#mega-dropdown{text-transform:uppercase; font-size:0.7em;  background-color: #000; background-color:rgba(23, 23, 23, 0.95);  *background-color: #000; position: absolute;left: 15px;top: 99px;width: 994px; display:none}
 #mega-dropdown ul {list-style-type:none; line-height:15px;}
 #mega-dropdown a, #account-menu a{text-decoration:none}
 .top-level{font-size:0.7em; text-decoration:none; padding:5px; text-transform:uppercase}
@@ -117,9 +122,9 @@ select{}
 #footer-columns{top:15px; left:45px; position:relative; width: 934px;}
 .footer-column{width:170px; float:left}
 #footer-email {float:right}
-#footer-email input{border:0; padding:5px;  color:#656565;}
-#footer-email input[type=text]{width:145px; background:#e9e9e9; height: 18px; margin-right: -2px;}
-#footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); padding-right:25px;color:#1c1800; font-weight:bold; height: 28px;}
+#footer-email input{border:0;color:#656565; font-weight:bold; }
+#footer-email input[type=text]{width:145px; background:#e9e9e9; padding:7px 0 7px 3px; margin-right: -2px; }
+#footer-email input[type=submit]{width:110px; background:#FEEA00 url(../img/ui/sign-up.gif); color:#1c1800;  padding: 7px 25px 7px 0;  }
 
 .footer-column p{color:#a4a4a4; font-size:0.8em;}
 .news-offers{margin-top: -5px; display: block;}
