added new fixes to ie

--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -3,3 +3,6 @@
 .ul-2, .footer-column ul{
 	margin-left:15px;
 }
+
+#footer-email input[type=text]{height:16px;}
+#footer-email input[type=submit]{height: 30px;}
