added better testing functionality

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ select{}
 
 
 /*content container*/
-#content{background:#ffffff;padding:15px; height:600px /*for testing only*/}
+#content{background:#ffffff;padding:15px;}
 
 /*footer*/
 #footer{/*text colors etc*/}
