--- a/css/main.css
+++ b/css/main.css
@@ -201,12 +201,13 @@ a.social-icon.youtube:hover {background-position: -60px 0px;}
 	padding:15px 15px 0 15px;
 }
 
-#grey-bg-wrapper{
+#category-grey-bg-wrapper, #grey-bg-wrapper{
 	background:#f6f6f6 url(../img/ui/header-gradient.png) repeat-x;
 	margin: 0;
 	overflow: auto;
 	padding-bottom: 10px;
 }
+
 .check-product-list{
 	clear: both;
 	padding-top: 50px;
@@ -542,7 +543,7 @@ div:first-child + div >div.check-item-image{
 /**********************************************************/
 
 /*mini basket component */
-#mini-basket-component{width:466px; text-transform:uppercase; font-size:0.7em;  background-color: #f6f6f6;background-image:url(../img/ui/header-gradient.png); background-repeat:repeat-x}
+#mini-basket-component{width:466px; text-transform:uppercase; font-size:0.7em;  background-color: #f6f6f6;background-image:url(../img/ui/header-gradient.png); background-repeat:repeat-x; border: 1px #cccccc solid;}
 .mini-basket-header{padding:10px;}
 #mini-product{float:left}
 #mini-total{float:right; width:80px}
@@ -575,8 +576,42 @@ div:first-child + div >div.check-item-image{
 #mini-checkout-btn{float:right}
 #mini-checkout-btn a{margin-top:10px}
 .line-total{font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; }
-.dropshadow {height:20px; margin: -1px 0 0 0;}
+.dropshadow {height:20px; line-height:0}
 .dropshadow img{width:100%; height:10px}
 #mini-basket-component hr {border-style:dotted; border-color:gray; border-width:1px}
 
+
 /**********************************************************/
+
+/* product listing styles */
+#product-listing-content{margin:25px 45px; overflow:hidden}
+#product-listing-content p{margin-bottom:4px}
+#product-listing-content h3{font-weight:normal;}
+#dd-filter select {float: left; background: transparent; border: none; height: 30px; border-radius: 0; padding: 5px 5px 5px 10px; margin-left: 2px; background: #dddddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0px; -webkit-appearance: none; -moz-appearance: none; text-indent: 0.01px; text-overflow: ""; width: 119px;background-position: -151px 0;margin-left: 0px;margin-bottom:20px}
+#group-title{width:300px; float:left}
+#prod-list-info{width:500px; float:right; text-align:right}
+#prod-list-wysiwyg{line-height:0.5em; height: 60px;}
+#prod-list-pagination{text-transform:uppercase; font-family:HelveticaNeueCE-Bold, Arial, Helvetica, sans-serif}
+#prod-list-pagination .pag-pos{float:left; width:200px}
+#prod-list-pagination .pag-controls{float:right;  width:200px; text-align:right}
+#prod-list-pagination a{color:#151515}
+#prod-list-pagination a:hover{text-decoration:underline}
+#prod-list-pagination .pag-disabled{color:#9e9e9e}
+#product-list{width:992px; overflow:visible; margin-bottom:20px}
+
+/**
+* product display box A styles
+**/
+
+.product-display-box-a{width:210px; height: 318px; padding:15px 32px 35px 0; float:left; position:relative}
+.product-display-box-a .product-img-a{height:230px; width:200px; position:relative}
+.product-display-box-a .product-img-a img {position: absolute;top: 0;bottom: 0;left: 0;right: 0;margin: auto;}
+.product-display-box-a .product-name-a {padding-top:10px; font-size:14px;}
+.product-display-box-a .product-info-a {width:94px; height:27px; background-color:#1c1c1c; text-align:center; float:left; margin-right:5px}
+.product-display-box-a .product-info-a span{ color:#ffffff; font-size:13px;font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.product-display-box-a .product-info-a a{ display:block; line-height:28px;}
+.product-display-box-a .product-buy-a input[type=submit]{width: 110px;background: #FEEA00 url(../img/ui/sign-up.gif);color: #1c1800;padding: 0 25px 0 0;margin: 0;line-height: 27px;height: 27px;border: 0;font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; cursor:pointer; font-size:13px}
+.product-buy-a {width: 110px;float: left;}
+.product-display-box-a .product-price-a{padding-bottom:4px}
+.product-display-box-a .product-info-container-a{position:absolute; bottom:0px; width: 210px;}
+.product-display-box-a .product-promo-icon-a{position:absolute; top:13px; right:45px}
