--- a/css/main.css
+++ b/css/main.css
@@ -591,12 +591,12 @@ div:first-child + div >div.check-item-image{
 #group-title{width:300px; float:left}
 #prod-list-info{width:500px; float:right; text-align:right}
 #prod-list-wysiwyg{line-height:0.5em; height: 60px;}
-#prod-list-pagination{text-transform:uppercase; font-family:HelveticaNeueCE-Bold, Arial, Helvetica, sans-serif}
-#prod-list-pagination .pag-pos{float:left; width:200px}
-#prod-list-pagination .pag-controls{float:right;  width:200px; text-align:right}
-#prod-list-pagination a{color:#151515}
-#prod-list-pagination a:hover{text-decoration:underline}
-#prod-list-pagination .pag-disabled{color:#9e9e9e}
+.prod-list-pagination{text-transform:uppercase; font-family:HelveticaNeueCE-Bold, Arial, Helvetica, sans-serif}
+.prod-list-pagination .pag-pos{float:left; width:200px}
+.prod-list-pagination .pag-controls{float:right;  width:200px; text-align:right}
+.prod-list-pagination a{color:#151515}
+.prod-list-pagination a:hover{text-decoration:underline}
+.prod-list-pagination .pag-disabled{color:#9e9e9e}
 #product-list{width:992px; overflow:visible; margin-bottom:20px}
 
 /**
