--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -6,3 +6,6 @@
 
 #footer-email input[type=text]{height:16px;}
 #footer-email input[type=submit]{height: 30px;}
+
+#mini-basket-items{max-height:none}
+.results-input{margin-top:-10px}
