tested search template added moz and ie fixes

--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -8,4 +8,4 @@
 #footer-email input[type=submit]{height: 30px;}
 
 #mini-basket-items{max-height:none}
-.results-input{margin-top:-10px}
+.yellow-btn{height:45px !important; margin-left:0; padding-top:10px !important;}
