--- a/css/main.css
+++ b/css/main.css
@@ -606,7 +606,7 @@ div:first-child + div >div.check-item-image{
 
 /* product page */
 #product-container{margin:0px 45px 45px 45px}
-#product-container #add-this-component{width:200px; height:32px; float:right; background-color:#999999;margin-top: -30px;}
+#product-container #add-this-component{ height:32px; float:right;margin-top: 15px;}
 #product-container h3{margin:0}
 #product-container .product-top-info{width:55%; float:left;margin-top:30px}
 #product-container .product-top-wysiwyg{width:40%; float:right; text-align:right;margin-top:40px}
@@ -648,6 +648,7 @@ div:first-child + div >div.check-item-image{
 #q-a-form-content input{height: 31px; line-height:31px; background-color: #dddddd; border: 1px solid #cacaca; padding: 2px;float: left; margin-bottom: 15px; display:block}
  #q-a-form-content .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
 #q-a-form-content textarea{background-color: #dddddd; width:445px}
+
 
 
 
