added content template

--- a/css/ie-7.css
+++ b/css/ie-7.css
@@ -1,8 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-.ul-2, .footer-column ul, #product-container .product-info-column li{
+.ul-2, .footer-column ul, #product-container .product-info-column li {
 	margin-left:15px;
 }
+#related-articles ul{margin-left:0}
 
 #footer-email input[type=text]{height:16px;}
 #footer-email input[type=submit]{height: 30px;}
