--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, .near-black{color:#151515}
 ****************/
 
 /*body*/
-body{margin:0; background:#E4EBEB; font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif;}
+body{margin:0; background:#aaaaaa; font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif;}
 p{font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif;}
 
 /*headings*/
@@ -636,6 +636,7 @@ div:first-child + div >div.check-item-image{
 .tab a.active { color:#FFE100}
 .tab-container .panel-container { background: #123; border: solid #666 1px; padding: 10px; -moz-border-radius: 0 4px 4px 4px; -webkit-border-radius: 0 4px 4px 4px; }
 .tab-container p{color: #9e9e9e; font-size:14px}
+.tab-container a{color:#151515; text-decoration:underline}
 .tab-container h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .tab-container h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .tab-container ul{font-size: 14px}
@@ -649,8 +650,33 @@ div:first-child + div >div.check-item-image{
  #q-a-form-content .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
 #q-a-form-content textarea{background-color: #dddddd; border: 1px solid #cacaca; width:445px}
 
+/*content template*/
+#content-container{overflow: hidden;}
+#content-container{padding:45px}
+#content-product-list{width:242px; float:left}
+#content-product-list .product-display-box-a{margin-bottom:30px; padding: 15px 0 35px 0}
+#content-template-wysiwyg{width:648px; float:left; padding-right:44px;}
 
+.p-img-left{margin:20px 20px 20px 0; float:left}
+.p-img-right{margin:20px 0 20px 20px; float:right}
+#content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
+#content-template-wysiwyg a{color:#151515; text-decoration:underline}
+#content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+#content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+#content-template-wysiwyg ul{font-size: 14px}
+#related-articles h2{margin-bottom:0}
+#related-articles a {color: #9e9e9e; font-size:14px}
+#related-articles ul {list-style-type:none; margin: 5px 0 0 -40px}
 
+#form-builder label {line-height: 31px; height: 31px; display: block; float: left; margin-bottom: 15px; clear: both; width: 220px; font-size: 12px;}
+#form-builder p {font-size: 12px; float: left; clear: both;}
+#form-builder input{height: 31px; line-height:31px; background-color: #dddddd; border: 1px solid #cacaca; padding: 2px;float: left; margin-bottom: 15px; display:block}
+#form-builder textarea{background-color: #dddddd; border: 1px solid #cacaca; width:445px}
+#form-builder select {float: left; background: transparent; border: none; height: 30px; border-radius: 0; padding: 5px; margin-left: 2px; background: #dddddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0px; -webkit-appearance: none; -moz-appearance: none; text-indent: 0.01px; text-overflow: ""; width: 144px;background-position: -126px 0;margin-left: 0px;margin-bottom:20px;margin-right:15px; padding-right:10px}
+#form-builder button{ background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
+#form-builder input[type=checkbox], #form-builder input[type=radio]{background-color:transparent; border:0}
+
+#content-iframe iframe{width:100%; margin-top:30px}
 
 
 
