--- a/css/main.css
+++ b/css/main.css
@@ -636,7 +636,7 @@ div:first-child + div >div.check-item-image{
 .tab a.active { color:#FFE100}
 .tab-container .panel-container { background: #123; border: solid #666 1px; padding: 10px; -moz-border-radius: 0 4px 4px 4px; -webkit-border-radius: 0 4px 4px 4px; }
 .tab-container p{color: #9e9e9e; font-size:14px}
-.tab-container a{color:#151515; text-decoration:underline}
+.tabbed-content a{color:#151515; text-decoration:underline}
 .tab-container h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .tab-container h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .tab-container ul{font-size: 14px}
@@ -652,7 +652,8 @@ div:first-child + div >div.check-item-image{
 
 /*content template*/
 #content-container{overflow: hidden;}
-#content-container{padding:45px}
+#content-container{margin: 0px 45px 45px 45px;}
+#content-container #add-this-component{ height:32px; float:right;margin-top: 15px;}
 #content-product-list{width:242px; float:left}
 #content-product-list .product-display-box-a{margin-bottom:30px; padding: 15px 0 35px 0}
 #content-template-wysiwyg{width:648px; float:left; padding-right:44px;}
