--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ a.social-icon.youtube:hover {background-position: -60px 0px;}
 	padding:15px;
 }
 
-#category-grey-bg-wrapper, #grey-bg-wrapper{
+#category-grey-bg-wrapper, #grey-bg-wrapper, #contact-grey-bg-wrapper{
 	background:#f6f6f6 url(../img/ui/header-gradient.png) repeat-x;
 	margin: 0;
 	overflow: auto;
@@ -650,7 +650,7 @@ div:first-child + div >div.check-item-image{
  #q-a-form-content .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
 #q-a-form-content textarea{background-color: #dddddd; border: 1px solid #cacaca; width:445px}
 
-/*content template*/
+/* content template */
 #content-container{overflow: hidden;}
 #content-container{margin: 0px 45px 45px 45px;}
 #content-container #add-this-component{ height:32px; float:right;margin-top: 15px;}
@@ -660,11 +660,6 @@ div:first-child + div >div.check-item-image{
 
 .p-img-left{margin:20px 20px 20px 0; float:left}
 .p-img-right{margin:20px 0 20px 20px; float:right}
-#content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
-#content-template-wysiwyg a{color:#151515; text-decoration:underline}
-#content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
-#content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
-#content-template-wysiwyg ul{font-size: 14px}
 #related-articles h2{margin-bottom:0}
 #related-articles a {color: #9e9e9e; font-size:14px}
 #related-articles ul {list-style-type:none; margin: 5px 0 0 -40px}
@@ -676,9 +671,25 @@ div:first-child + div >div.check-item-image{
 #form-builder select {float: left; background: transparent; border: none; height: 30px; border-radius: 0; padding: 5px; margin-left: 2px; background: #dddddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0px; -webkit-appearance: none; -moz-appearance: none; text-indent: 0.01px; text-overflow: ""; width: 144px;background-position: -126px 0;margin-left: 0px;margin-bottom:20px;margin-right:15px; padding-right:10px}
 #form-builder button{ background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
 #form-builder input[type=checkbox], #form-builder input[type=radio]{background-color:transparent; border:0}
-
 #content-iframe iframe{width:100%; margin-top:30px}
 
+/* contact us */
+#contact-us-container {margin:45px; overflow:hidden}
+.wysiwyg-contact-top-left{float:left; width:50%}
+.wysiwyg-contact-top-right{float:right; width:50%; text-align:right; margin-top:40px}
+.wysiwyg-contact-top-right p {margin:4px 0 0 auto}
+#contact-us-container .left-column, #contact-us-container .right-column {width:372px; }
+#contact-us-container .left-column {float:left; padding-left:22px}
+#contact-us-container .right-column {float:right; padding-right:22px}
+
+/*wysiwyg*/
+#contact-us-container  p, #content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
+#contact-us-container  a, #content-template-wysiwyg a{color:#151515; text-decoration:underline}
+#contact-us-container  h3, #content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+#contact-us-container  h2, #content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+#contact-us-container  ul, #content-template-wysiwyg ul{font-size: 14px}
+.v-centered-icon-text{height:29px; line-height:29px; float:left; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; width:200px}
+#contact-us-container .icons img{float:left; padding-right: 5px}
 
 
 /**
@@ -719,7 +730,7 @@ div:first-child + div >div.check-item-image{
 
 
 
-/* firefox tweeks */
+/* firefox tweaks */
 @-moz-document url-prefix() {
 	#search-results-content .yellow-btn {top:2px;}
 }
