--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ a.social-icon.youtube:hover {background-position: -60px 0px;}
 .inline{display: inline;}
 
 .text-button{padding: 0; cursor:pointer;}
-.remove-button {border: 0; background: url(../img/ui/remove.png) no-repeat; padding-left: 15px;color: #ff0055;}
+.remove-button {border: 0; background: url(../img/ui/remove.png) no-repeat center left; padding-left: 15px;color: #ff0055;}
 
 .pound{font-family: helvetica, sans-serif; font-weight:bold;}
 .hide{display: none;}
@@ -725,9 +725,15 @@ div:first-child + div >div.check-item-image{
 .contact-us .icons {height:29px}
 
 /*faq page*/
-#faq-content{margin:45px 67px}
-#faq-content p {color: #9e9e9e; font-size:13px; padding-bottom:10px}
-#faq-content li{font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.faq-content{margin:45px 67px}
+.faq-content p {color: #9e9e9e; font-size:13px; padding-bottom:25px}
+.faq-content li{font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.faq-content-footer{padding-left:40px}
+.faq-content-footer h4{font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; font-weight:normal; margin-bottom:0}
+
+.faq-content .question-form { display: block; float: left; margin-bottom:10px}
+.faq-content .question-input { height: 27px; line-height:27px; background-color: #dddddd; border: 1px solid #cacaca; margin:0; padding-left:5px; color:grey}
+.faq-content .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -7px; text-align: left; padding-left: 40px; cursor:pointer; border:0; position:relative}
 
 
 
